tests/miniJava/neg/000165_mutation.MiniJava
class java { public static if void Main ( String [ ] java ) { { } } }
